# LeeChemoProjects

./: README.md  Song Popularity Prediction ML Model.ipynb
Parallel text search engine project/: CMakeLists.txt
Parallel text search engine project/include/: FileEnumerator.hpp  FileScanner.hpp  OutputWriter.hpp  SearchConfig.hpp  SearchResult.hpp  ThreadSafeQueue.hpp  Util.hpp  WorkerPool.hpp
Parallel text search engine project/src/: FileEnumerator.cpp  FileScanner.cpp  OutputWriter.cpp  Util.cpp  WorkerPool.cpp  main.cpp
RecipesProject/backend/: main.js  package-lock.json  package.json
RecipesProject/backend/routes/: auth.js  recipes.js  user.js
RecipesProject/frontend/: README.md  main.js  package-lock.json  package.json  vue.config.js
RecipesProject/frontend/src/: App.vue  main.js  store.js
Super-Li project/dev/: README_(1)[1].docx
Super-Li project/dev/src/: data.csv
dev/src/DAL/: BranchDAO.java  DB.java  DriverDAO.java  ItemDAO.java  OrderDTO.java  ShiftHistoryDAO.java  TransportDAO.java  TruckDTO.java  WorkersDAO.java
dev/src/Domain/: BranchesRepository.java  Driver.java  DriverRepository.java  HRManager.java  ItemRepository.java  OperationsController.java  Scheduling.java  Shift.java  Site.java  SystemLimitations.java  Transport.java  TransportController.java  TruckRepository.java  WorkerLimit.java  WorkersController.java  WorkersRepository.java
dev/src/Presentation/: Main.java  TransportMenu.java  readDataFile.java
maze-project/src/test/: GeneralCheckingFunctions.java  RunMazeGenerator.java  RunSearchOnMaze.java
(+69 files in other folders)
